<resources>
    <string name="app_name">Warehouse (Lim Ming Jun)</string>
    <string name="logo_of_the_app">logo of the app</string>
    <string name="welcome">Welcome!</string>
    <string name="nice_to_meet_you">Nice to meet you!</string>
    <string name="login_button1">Login</string>
    <string name="register">Register</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="hello_there">Hello There!</string>
    <string name="email">Email:</string>
    <string name="someone_gmail_com">someone@gmail.com</string>
    <string name="password">Password:</string>
    <string name="Password">***************</string>
    <string name="donald_trump">Donald</string>
    <string name="username">Username:</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="backbutton">backButton</string>
    <string name="avatar">Avatar</string>
    <string name="background_pinkroundsquare">backGround_pinkRoundSquare</string>
    <string name="hello_Username">Hello, Donald!</string>
    <string name="email_icon">email_icon</string>
    <string name="username_icon">username_icon</string>
    <string name="delimeter_email_usercard_icon">delimeter_email_usercard_icon</string>
    <string name="edit_Btn">Edit</string>
    <string name="change_password_Btn">Change Password</string>
    <string name="update">Update</string>
    <string name="pwd_condition">pwd condition</string>
    <string name="u25cf_use_at_least_7_characters_n_u25cf_mix_upper_and_lower_case_characters_n_u25cf_use_at_least_1_number_n_u25cf_use_at_least_1_special_character_like">
        ● Use at least 7 character.
        ● Mix upper and lower case characters
        ● Use at least 1 number
        ● Use at least 1 special character like !, #</string>
    <string name="please_make_sure_that_your_password_fulfils_the_following_criteria">Please make sure that your password fulfils the following criteria:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_new_password">Confirm New Password:</string>
    <string name="save">Save</string>
    <string name="input_new_password">input new password</string>
    <string name="input_confirm_new_password">input confirm new password</string>
    <string name="warehouse_management">Warehouse Management</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="stockInImageBtn">stockInImageBtn</string>
    <string name="stockOutImageBtn">stockOutImageBtn</string>
    <string name="addNewImageBtn">addNewImageBtn</string>
    <string name="itemInfoImageBtn">itemInfoImageBtn</string>
    <string name="todo">TODO</string>
    <string name="product1">SH0001M</string>
    <string name="stock_in">Stock In</string>
    <string name="category">Category</string>
    <string name="btnshirt">btnShirt</string>
    <string name="btnshoe">btnShoe</string>
    <string name="btnback">BtnBack</string>
    <string name="btnadd">btnAdd</string>
    <string name="product">Product</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="background">background</string>
    <string name="plusbtn">plusBtn</string>
    <string name="confirmbtn">confirmBtn</string>
    <string name="clearbtn">clearBtn</string>
    <string name="stock_out">Stock Out</string>
    <string name="add_new_item">Add New Item</string>
    <string name="product_name">Product Name</string>
    <string name="product_id">Product ID</string>
    <string name="price_per_unit">Price per Unit</string>
    <string name="location">Location</string>
    <string name="image">Image</string>
    <string name="eg_lot123">Eg: LOC001A</string>
    <string name="eg_st0001m">Eg: ST0001M</string>
    <string name="eg_t_shirt">Eg: Hello Kitty Shirt</string>
    <string name="cameraicon">cameraIcon</string>
    <string name="eg_25_00">Eg. 25.00</string>
    <string name="eg_m">Eg. M</string>
    <string name="item_information">Item Information</string>
    <string name="itemimage">itemImage</string>
    <string name="eg_22">Eg: 22</string>
    <string name="title_text">Title Text</string>
    <string name="detail_text">Detail Text</string>
    <string name="add">Add</string>

    <string name="spinner_shirt_size">Spinner Example</string>
    <string name="eg_adidas_original_superstar">Eg: Adidas Original Superstar</string>
    <string name="eg_sh00019">Eg: SH0001</string>
    <string name="eg_350_00">Eg: 350.00</string>
    <string name="eg_lot001a">Eg: LOT001A</string>
    <string name="out">out</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="shoeCategory">Shoe</string>
    <string name="shirtCategory">Shirt</string>
    <string name="transaction_history">Transaction History</string>
    <string name="stock_in_history_list">Stock In:</string>
    <string name="date_and_time"><![CDATA[Date & Time:]]></string>
    <string name="view_button">View</string>
    <string name="stock_out_history_list">Stock Out:</string>
    <string name="menu_bar">Menu</string>
    <string-array name="numbers">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
    <string-array name="shoeNumbers">
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>5.5</item>
        <item>6</item>
        <item>6.5</item>
        <item>7</item>
        <item>7.5</item>
        <item>8</item>
        <item>8.5</item>
        <item>9</item>
        <item>9.5</item>
        <item>10</item>
        <item>10.5</item>
        <item>11</item>
        <item>11.5</item>
        <item>12</item>
        <item>12.5</item>
        <item>13</item>
        <item>13.5</item>
    </string-array>
    <string-array name="category">
        <item>All</item>
        <item>Shirt</item>
        <item>Shoe</item>
    </string-array>
    <string-array name="histotyType">
        <item>All</item>
        <item>Stock In</item>
        <item>Stock Out</item>
    </string-array>

</resources>