<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditItem">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <TextView
        android:id="@+id/itemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="85dp"
        android:text="@string/item_information"
        android:textColor="#253A4B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="380dp"
        android:layout_height="510dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/background_pinkroundsquare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemInfo"
        app:srcCompat="@drawable/rectangle_53" />

    <TextView
        android:id="@+id/productID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/product_id"
        android:textColor="#253A4B"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="12dp"
        android:text="@string/location"
        android:textColor="#253A4B"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/product_name"
        android:textColor="#253A4B"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/LocationText" />

    <TextView
        android:id="@+id/quantity1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        android:textColor="#253A4B"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/ProductNameText" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/category"
        android:textColor="#253A4B"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/QuantityText" />

    <TextView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:text="@string/image"
        android:textColor="#253A4B"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="120dp"
        android:text="@string/size"
        android:textColor="#253A4B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/PriceText" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/price_per_unit"
        android:textColor="#253A4B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/ProductNameText" />

    <ImageButton
        android:id="@+id/photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="52dp"
        android:background="@color/Transparent"
        android:contentDescription="@string/cameraicon"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@color/Transparent"
        android:contentDescription="@string/confirmbtn"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/background"
        app:srcCompat="@drawable/group_64" />

    <ImageButton
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@color/Transparent"
        android:contentDescription="@string/clearbtn"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/background"
        app:srcCompat="@drawable/group_65" />

    <EditText
        android:id="@+id/ProductNameText"
        android:layout_width="337dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_corner_border"
        android:ems="10"
        android:hint="@string/eg_t_shirt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/productName"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/productName" />

    <EditText
        android:id="@+id/LocationText"
        android:layout_width="138dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/round_corner_border"
        android:ems="10"
        android:hint="@string/eg_lot123"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters"
        android:labelFor="@id/location"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <EditText
        android:id="@+id/QuantityText"
        android:layout_width="114dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_corner_border"
        android:ems="10"
        android:hint="@string/eg_22"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/quantity1" />

    <EditText
        android:id="@+id/PriceText"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="39dp"
        android:background="@drawable/round_corner_border"
        android:ems="10"
        android:hint="@string/eg_25_00"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/itemimage"
        app:layout_constraintEnd_toStartOf="@+id/photo_button"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/ProductIDInput"
        android:layout_width="139dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/productID" />

    <TextView
        android:id="@+id/CategoryInput"
        android:layout_width="139dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <TextView
        android:id="@+id/SizeInput"
        android:layout_width="139dp"
        android:layout_height="28dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/size" />

</androidx.constraintlayout.widget.ConstraintLayout>